# isp_manager

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
backend/: alembic.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/alembic/: env.py
backend/alembic/sql/: 0001_initial.sql  0002_fix_pon_type.sql  0004_optical_alert_open.sql  0005_partition_security_definer.sql  0006_partition_function_recreate.sql
backend/alembic/versions/: 0001_initial_schema.py  0002_fix_pon_type_xgspon_to_xgpon.py  0003_collection_running_unique.py  0004_optical_alert_open.py  0005_partition_security_definer.py  0006_partition_function_recreate.py  0007_prov_order_active_unique.py  0007_provisioning_order_active_unique.py  0008_prov_cancel_and_idempotency_hash.py  0008_prov_cancel_idemp_hash.py
backend/app/: celery_app.py  main.py  worker.py
backend/app/adapters/olt/: __init__.py  base.py  dtos.py  factory.py  mock.py
backend/app/adapters/secrets/: __init__.py  base.py  env_store.py  factory.py
backend/app/api/: deps.py  errors.py
backend/app/api/middleware/: logging.py  request_id.py
backend/app/api/v1/routes/: app_users.py  audit_log.py  auth.py  chassis.py  collection_jobs.py  credentials.py  (+25 more)
backend/app/core/: actor.py  celery_signals.py  config.py  exceptions.py  ids.py  logging.py  pagination.py  time.py
backend/app/db/: base.py  mixins.py  session.py  session_sync.py  types.py
backend/app/domains/audit/: enums.py  exceptions.py  masking.py
backend/app/domains/auth/: exceptions.py  security.py  secutity.py
backend/app/domains/collection/: enums.py  exceptions.py
backend/app/domains/inventory/: enums.py  exceptions.py
backend/app/domains/optical/: enums.py  exceptions.py
backend/app/domains/provisioning/: enums.py  exceptions.py
backend/app/tasks/: collection.py  health.py  partitions.py  provisioning.py
backend/scripts/: render_uvicorn_log_config.py  seed_admin.py
backend/tests/: conftest.py
backend/tests/integration/api/: _olt_mock.py  _optical_mock.py  _provisioning_setup.py  test_app_users.py  test_audit_instrumentation.py  test_audit_log.py  test_auth.py  test_chassis.py  test_collection_jobs.py  test_cors.py  test_credential_olt_link.py  test_credentials.py  test_effective_thresholds.py  test_line_profiles.py  test_manufacturers.py  test_middleware_and_errors.py  test_normalized_commands.py  test_olt_command_profiles.py  test_olt_models.py  test_olts.py  test_onu_models.py  test_onus.py  test_optical_alerts.py  test_optical_history.py  test_optical_threshold_policies.py  test_partitions_task.py  test_pending_onu.py  test_pon_ports.py  test_provisioning_orders.py  test_provisioning_orders_cancel.py  test_provisioning_orders_idempotency.py  test_provisioning_templates.py  test_service_profiles.py  test_signal_reading_jobs.py  test_slots.py  test_stale_job_detection.py  test_topology.py  test_user_groups.py  test_vlans.py  test_worker_audit_instrumentation.py
backend/tests/unit/adapters/: test_olt_adapter.py
backend/tests/unit/core/: test_actor.py  test_celery_signals.py  test_exceptions.py  test_ids.py  test_logging.py  test_pagination.py  test_secrets_adapter.py  test_time.py
(+173 files in other folders)
